# api-pilot

./: .editorconfig  .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 301323fa90b9_sprint_1a_initial_schema.py
backend/app/: config.py  main.py
backend/app/ai/: service.py
backend/app/ai/providers/: anthropic_provider.py  base.py  factory.py  mock_provider.py  openai_compatible_provider.py
backend/app/api/: __init__.py  deps.py  health.py  imports.py  suites.py
backend/app/core/: __init__.py  constants.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  endpoint.py  spec.py  suite.py  user.py  workspace.py
backend/app/parsers/: __init__.py  enums.py  errors.py  fetcher.py  models.py  swagger_parser.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: __init__.py  import_service.py  suite_service.py
backend/app/storage/: __init__.py  base.py  factory.py  local.py
backend/scripts/: install.ps1  run-dev.ps1  smoke_test_llm.py
backend/tests/: conftest.py  test_api_imports.py  test_api_suites.py  test_db_integration.py  test_db_smoke.py  test_health.py  test_import_service.py  test_llm_provider.py  test_storage_local.py  test_swagger_parser.py
docs/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  (+1 more)
infra/: README.md  docker-compose.yml
scripts/: db-reset.ps1  dev-start.ps1  dev-test.ps1
(+6 files in other folders)
