[project]
name = "api-pilot-backend"
version = "0.0.1"
description = "AI-native API testing platform — backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "httpx>=0.27",
    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "greenlet>=3.1",
    # Auth / hashing
    "bcrypt>=4.2",
    # Storage
    "aiofiles>=23.2",
    # Spec parsing
    "prance>=23.6.21.0",
    "openapi-spec-validator>=0.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    # Test DB (fast in-memory async SQLite, no Postgres needed in CI)
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
